Fix value prop video not centered on mobile devices

--- a/src/_styles/modules/value-proposition.scss
+++ b/src/_styles/modules/value-proposition.scss
@@ -55,8 +55,6 @@
   .value-prop__video iframe {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: center;
   }
 }
 
